# SFML-Tetris

./: CMakeLists.txt  CmakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  deploy.yml
src/: Board.cpp  Config.hpp  Game.cpp
